$Id: History,v 1.9 2001-02-20 11:48:09 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Test 02 History file
                    --------------------
This file should be used by the test developer to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
Feb 20 2001 Steve O'Neale Update reference outputs following 
            materials-V03-00-04 from tagset268 (test02-V03-00-02)

Feb 15 2001 Steve O'Neale Update large_N output from geant4-03-00-ref-02

Frb 08 2001 Hisaya Kurashige
- Modify Tst02SteppingAction.cc to fit with new tracking code (tracking-V03-00-05)

Jan 06 2001  Hisaya Kurashige 
- intorduce Modular Physics List

25th November 2000 Steve O'Neale (tagset210)
- Update test outputs for min.delta energy cut

18th August 2000  Michel Maire  
- standard G4ionIonisation removed from the PhysicsList

June 17, 2000  John Allison  (test02-V01-01-00)
- Updated test02*.out for geant4-01-01-ref-06.

16 Apr., 1999 H.Kurashige 
- Modify SetCuts() and ConstructParticle() in Tst02PhysicsList
- Modify BeginOfRunAction() and EndOfRunAction() in Tst02RunAction
- Modify UserSteppingAction() in Tst02SteppingAction


9th August 1998  John Allison
- Changed G4UIterminal to G4UIGAG.

June 27, 98 G. Cosmo
- Created.
