@@ -1,4 +1,4 @@
-$Id: History,v 1.9 2001-02-20 11:48:09 stesting Exp $
+$Id: History,v 1.10 2001-03-06 10:38:34 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+March 07 2001 H.Kurashige (test02-V03-00-03)
+-  Add G4MuonMinusCaptureAtRest in G4MuonPhysics 
+
 Feb 20 2001 Steve O'Neale Update reference outputs following 
             materials-V03-00-04 from tagset268 (test02-V03-00-02)
 
